env.example updated

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,6 @@ JWT_EXPIRE=7d
 
 # Frontend URL (for CORS)
 CLIENT_URL=http://localhost:3000
+
+EMAIL_USER=r36457799@gmail.com
+EMAIL_PASS=rnng ltwu wpqj ebvf
